# mosaik

./: .gitignore  Cargo.toml  README.md
assets/: main.css
src/: file_manager.rs  main.rs
src/components/: canvas.rs  connections.rs  mod.rs  settings.rs  workflow.rs
src/components/nodes/: file.rs  mod.rs  model.rs
src/llm/: anthropic.rs  api_manager.rs  mod.rs  ollama.rs
