[package]
name = "mosaik"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
tokio = { version = "1.45.1", features = ["net", "io-util"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json"] }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
dirs = { version = "6.0.0" }
rfd = { version = "0.15.3" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop",]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
